# src/swagger.json
@@ -1,92 +1,146 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-        "version": "1.0.0",
-        "title": "oscp-spatial-content-discovery",
-        "description": "OSCP Spatial Content Discovery Service (Open AR Cloud)",
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        }
-    },
-    "servers": [
-        {
-            "url": "/",
-            "description": "Local Dev"
-        }
-    ],
+  "openapi": "3.0.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "oscp-spatial-content-discovery",
+    "description": "OSCP Spatial Content Discovery Service (Open AR Cloud)",
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    }
+  },
+  "servers": [
+    {
+      "url": "/",
+      "description": "Local Dev"
+    }
+  ],
 
-    "consumes": [
-        "application/json"
-    ],
-    "produces": [
-        "application/json"
-    ],
-    "paths": {
-        "/scrs": {         
-            "get": {
-                "summary": "Get SCRs within given bbox",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "bbox",
-                        "required": true,
-                        "description": "SCRs within bbox",
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                    },
-                    "404": {
-                        "description": "Failed"
-                    }
-                }
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
+  "paths": {
+    "/scrs": {
+      "get": {
+        "summary": "Get SCRs within given bbox",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "bbox",
+            "required": true,
+            "description": "SCRs within bbox"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Failed"
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new SCR",
+        "requestBody": {
+          "description": "SCR Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/SCR"
+              }
             }
-
+          }
         },
-        "/scrs/{id}": {
-            "get": {
-                "summary": "Get SCR with given ID",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "required": true,
-                        "description": "SCR with id",
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                    },
-                    "404": {
-                        "description": "Failed"
-                    }
-                }
-            }, 
-
-            "delete": {
-                "summary": "Delete SCR with given ID",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "required": true,
-                        "description": "SCR with id",
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                    },
-                    "404": {
-                        "description": "Failed"
-                    }
-                }
-            }                       
-
-        },
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Failed"
+          }
+        }
+      }
     },
-
+    "/scrs/{id}": {
+      "get": {
+        "summary": "Get SCR with given ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "SCR with id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Failed"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete SCR with given ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "SCR with id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Failed"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "SCR": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "geopose": {
+          "type": "object",
+          "properties": {
+            "north": {
+              "type": "number"
+            },
+            "east": {
+              "type": "number"
+            },
+            "vertical": {
+              "type": "number"
+            },
+            "qNorth": {
+              "type": "number"
+            },
+            "qEast": {
+              "type": "number"
+            },
+            "qVertical": {
+              "type": "number"
+            },
+            "qW": {
+              "type": "number"
+            }
+          }
+        },
+        "url": {
+          "type": "string"
+        }
+      }
+    }
+  }
 }
